--- a/source/benchmark/CMakeLists.txt
+++ b/source/benchmark/CMakeLists.txt
@@ -2,5 +2,5 @@
 add_executable(bench bench.cpp)
 add_dependencies(bench benchmark benchmark_main)
 
-target_link_libraries(bench benchmark benchmark_main)
-target_link_libraries(bench bee log)
+target_link_libraries(bench PUBLIC benchmark benchmark_main)
+target_link_libraries(bench PUBLIC bee log)
