--- a/config/client.conf
+++ b/config/client.conf
@@ -30,3 +30,14 @@ address = 127.0.0.1
 port = 8888
 read_buffer_size = 4194304
 write_buffer_size = 4194304
+
+[httpclient]
+ssl_enabled = false
+ssl_server = true
+cert_file = config/ssl/cert.pem
+key_file = config/ssl/key.pem
+keepalive_timeout = 30000  # 30秒
+max_requests = 1000        # 每个连接最大请求数
+read_buffer_size = 16384   # 16KB
+write_buffer_size = 32768  # 32KB
+request_timeout = 5000     # 5秒
