--- a/config/client.conf
+++ b/config/client.conf
@@ -32,12 +32,9 @@ read_buffer_size = 4194304
 write_buffer_size = 4194304
 
 [httpclient]
+socktype = tcp
+version = 4
+uri = https://127.0.0.1
+read_buffer_size = 4194304
+write_buffer_size = 4194304
 ssl_enabled = false
-ssl_server = true
-cert_file = config/ssl/cert.pem
-key_file = config/ssl/key.pem
-keepalive_timeout = 30000  # 30秒
-max_requests = 1000        # 每个连接最大请求数
-read_buffer_size = 16384   # 16KB
-write_buffer_size = 32768  # 32KB
-request_timeout = 5000     # 5秒
