--- a/config/client.conf
+++ b/config/client.conf
@@ -34,7 +34,7 @@ write_buffer_size = 4194304
 [httpclient]
 socktype = tcp
 version = 4
-uri = https://127.0.0.1
+uri = http://127.0.0.1:443
 read_buffer_size = 4194304
 write_buffer_size = 4194304
 ssl_enabled = false
