--- a/config/logserver.conf
+++ b/config/logserver.conf
@@ -19,6 +19,12 @@ asynclog = false
 interval = 5000
 threshold = 4096
 
+[influxlog]
+dir = /var/tmp/influxdb
+filename = influxlog
+pattern = %m%n
+asynclog = false
+
 [logclient]
 socktype = tcp
 version = 4
