--- a/source/bee/CMakeLists.txt
+++ b/source/bee/CMakeLists.txt
@@ -53,6 +53,9 @@ set(BEE_PUBLIC_INCLUDES ${SOURCE_PATH}/bee/common
                         ${SOURCE_PATH}/bee/http
                         ${SOURCE_PATH}/bee/http/servlets
                         ${SOURCE_PATH}/bee/http/internal
+                        ${SOURCE_PATH}/bee/monitor
+                        ${SOURCE_PATH}/bee/monitor/metrics
+                        ${SOURCE_PATH}/bee/monitor/collectors
                         ${SOURCE_PATH}/bee/meta
                         ${SOURCE_PATH}/protocol
                         ${SOURCE_PATH}/protocol/include
