influxdb/telegraf/grafana

--- a/config/telegraf/telegraf.conf
+++ b/config/telegraf/telegraf.conf
@@ -3,46 +3,80 @@
   round_interval = true
   metric_batch_size = 1000
   metric_buffer_limit = 10000
-  collection_jitter = "0s"
-  flush_interval = "10s"
-  flush_jitter = "0s"
-  precision = "ns"
-  hostname = "$HOSTNAME"  # 使用主机名作为标签
-  omit_hostname = false
+  collection_jitter = "0s" # 增加 jitter，避免写入高峰
+  flush_interval = "30s"
+  flush_jitter = "5s"
+  precision = "1s"
+  skip_processors_after_aggregators = false
 
 # 系统指标采集
 [[inputs.cpu]]
-  percpu = true
-  totalcpu = true
-  collect_cpu_time = false
-  report_active = false
+  percpu = true # 开启 per-core，增加维度## Whether to report per-cpu stats or not
+  totalcpu = true # Whether to report total system cpu stats or not
+  collect_cpu_time = false # If true, collect raw CPU time metrics.
+  # report_active = false
 
 [[inputs.mem]]
+  # no configuration
 
+# Read metrics about disk usage by mount point
 [[inputs.disk]]
-  ignore_fs = ["tmpfs", "devtmpfs", "devfs", "iso9660", "overlay", "aufs", "squashfs"]
-  mount_points = ["/", "/data"]  # 监控重要挂载点
+  ## By default, telegraf gather stats for all mountpoints.
+  ## Setting mountpoints will restrict the stats to the specified mountpoints.
+  mount_points = ["/"] # 监控重要挂载点
+  ## Ignore some mountpoints by filesystem type. For example (dev)tmpfs (usually
+  ## present on /run, /var/run, /dev/shm or /dev).
+  ignore_fs = ["tmpfs", "devtmpfs"]
 
+# Read metrics about disk IO by device
 [[inputs.diskio]]
-  devices = ["sda", "sdb", "vd*"]  # 监控所有磁盘
+  ## By default, telegraf will gather stats for all devices including
+  ## disk partitions.
+  ## Setting devices will restrict the stats to the specified devices.
+  # devices = ["sda", "sdb", "vd*"]
+  ## Uncomment the following line if you need disk serial numbers.
+  # skip_serial_number = false
 
-[[inputs.net]]
-  interfaces = ["eth*", "enp*"]  # 监控所有网络接口
+# Read metrics about swap memory usage
+[[inputs.swap]]
 
 [[inputs.system]]  # 系统负载和运行时间
 
+[[inputs.nstat]]
+
+# Get kernel statistics from /proc/stat
+[[inputs.kernel]]
+  # no configuration
+
+# Get the number of processes and group them by status
+[[inputs.processes]]
+  # no configuration
+
 # 业务日志采集
 [[inputs.tail]]
-  files = ["/var/log/monitoring/metrics_*.influxlog"]
+  files = ["/var/tmp/influxdb/influxdb.log"]
   from_beginning = true
   data_format = "influx"
   pipe = false
   watch_method = "poll"
 
+# 聚合器：每分钟聚合一次数据（平均值、最大值等），并丢弃原始数据
+# [[aggregators.basicstats]]
+#   period = "60s"
+#   drop_original = true
+#   namepass = ["cpu", "mem", "disk", "diskio", "nstat"]
+
+[[outputs.influxdb]]
+  urls = ["http://localhost:8086"]
+  database = "telegraf"
+  # skip_database_creation = false
+  retention_policy = "30d"  # 使用定义的保留策略
+  timeout = "10s"
+
 # InfluxDB输出
-[[outputs.influxdb_v2]]
-  urls = ["http://influxdb-central:8086"]
-  token = "$INFLUX_TOKEN"
-  organization = "my-org"
-  bucket = "monitoring-bucket"
-  timeout = "5s"
+# [[outputs.influxdb_v2]]
+#   urls = ["http://influxdb-central:8086"]
+#   token = "$INFLUX_TOKEN"
+#   organization = "my-org"
+#   bucket = "monitoring-bucket"
+#   timeout = "5s"
