--- a/config/telegraf/telegraf.conf
+++ b/config/telegraf/telegraf.conf
@@ -1,13 +1,13 @@
-[agent]
-  interval = "10s"
-  round_interval = true
-  metric_batch_size = 1000
-  metric_buffer_limit = 10000
-  collection_jitter = "0s" # 增加 jitter，避免写入高峰
-  flush_interval = "30s"
-  flush_jitter = "5s"
-  precision = "1s"
-  skip_processors_after_aggregators = false
+# [agent]
+#   interval = "10s"
+#   round_interval = true
+#   metric_batch_size = 1000
+#   metric_buffer_limit = 10000
+#   collection_jitter = "0s" # 增加 jitter，避免写入高峰
+#   flush_interval = "30s"
+#   flush_jitter = "5s"
+#   precision = "1s"
+#   skip_processors_after_aggregators = false
 
 # 系统指标采集
 [[inputs.cpu]]
@@ -42,7 +42,7 @@
 
 [[inputs.system]]  # 系统负载和运行时间
 
-[[inputs.nstat]]
+[[inputs.netstat]]
 
 # Get kernel statistics from /proc/stat
 [[inputs.kernel]]
@@ -70,7 +70,7 @@
   urls = ["http://localhost:8086"]
   database = "telegraf"
   # skip_database_creation = false
-  retention_policy = "30d"  # 使用定义的保留策略
+  retention_policy = "7d"  # 使用定义的保留策略
   timeout = "10s"
 
 # InfluxDB输出
